fix: inconsistent password wrapping

--- a/src/app/password/password.component.scss
+++ b/src/app/password/password.component.scss
@@ -22,7 +22,7 @@
   // Typography
   color: $color-near-white;
   @include password;
-  overflow-wrap: anywhere;
+  line-break: anywhere;
 
   &.placeholder {
     color: color.change($color-near-white, $alpha: 0.25);
